objects/Send_Article_Settings__c.object
<CustomObject><fields>
        <fullName>Last_Run_Status__c</fullName>
        <label>Last Run Status</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Last_Scheduled_Run__c</fullName>
        <label>Last Scheduled Run</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Number_of_Articles_Sent__c</fullName>
        <label>Number of Articles Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SchedulerName__c</fullName>
        <defaultValue>"Send Articles To MW Answers"</defaultValue>
        <label>SchedulerName</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><label>Send Article Settings</label><visibility>Public</visibility></CustomObject>